<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        style="@style/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:gravity="center">

            <TextView
                style="@style/labels_style"
                android:layout_height="wrap_content"
                android:text="@string/vector1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <TextView
                        style="@style/components_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/xcomp"/>
                    <EditText
                        style="@style/hints_style"
                        android:id="@+id/xcomp1"
                        android:hint="@string/xcompHint"
                        android:inputType="number"
                        android:digits="1234567890,"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <TextView
                        style="@style/components_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ycomp"/>
                    <EditText
                        style="@style/hints_style"
                        android:id="@+id/ycomp1"
                        android:hint="@string/ycompHint"
                        android:inputType="number"
                        android:digits="1234567890,"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <TextView
                        style="@style/components_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zcomp"/>
                    <EditText
                        style="@style/hints_style"
                        android:id="@+id/zcomp1"
                        android:hint="@string/zcompHint"
                        android:inputType="number"
                        android:digits="1234567890,"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/labels_style"
                android:layout_height="wrap_content"
                android:text="@string/vector2" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <TextView
                        style="@style/components_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/xcomp"/>
                    <EditText
                        style="@style/hints_style"
                        android:id="@+id/xcomp2"
                        android:hint="@string/xcompHint"
                        android:inputType="number"
                        android:digits="1234567890,"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <TextView
                        style="@style/components_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ycomp"/>
                    <EditText
                        style="@style/hints_style"
                        android:id="@+id/ycomp2"
                        android:hint="@string/ycompHint"
                        android:inputType="number"
                        android:digits="1234567890,"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <TextView
                        style="@style/components_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zcomp"/>
                    <EditText
                        style="@style/hints_style"
                        android:id="@+id/zcomp2"
                        android:hint="@string/zcompHint"
                        android:inputType="number"
                        android:digits="1234567890,"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    style="@style/button_style"
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_1"/>
                <Button
                    style="@style/button_style"
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    style="@style/button_style"
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_3"/>
                <Button
                    style="@style/button_style"
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_4"/>
            </LinearLayout>

            <Button
                style="@style/button2_style"
                android:id="@+id/btnclr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_clr"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>